--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- FAVICONS -->
-
+    <link rel="shortcut icon" href="./img/favicons/logo-electrik2.png" type="image/png">
     <meta name="description" content="описание сайта для гугла">
     <meta name="keywords" content="описание сайта для яндекса">
     <meta name="google" content="notranslate"/>
