--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     УСЛУГ</a>
                 <a href="#" class="nav__link" data-scroll="#our-team">НАША КОМАНДА</a>
                 <a href="#" class="nav__link" data-scroll="#testimonials">ОТЗЫВЫ</a>
-                <a href="#" class="nav__link" data-scroll="#download">КОНТАКТЫ</a>
+                <a href="#" class="nav__link" data-scroll="#form">КОНТАКТЫ</a>
             </nav>
 
             <button class="burger" type="button" id="navToggle">
@@ -339,6 +339,7 @@
 <!-- /////////////////////////////////////////////////////////////////////TEAM  -->
 <div class="team" id="our-team">
     <div class="container">
+        <h1>наша команда</h1>
         <div class="team__inner">
             <div class="team__item">
                 <img class="team__img" src="img/team/man-1.jpg" alt="">
@@ -385,7 +386,7 @@
 </div>          <!-- team -->
 
 <!-- /////////////////////////////////////////////////////////////////////TESTIMONIALS  -->
-<div class="container">
+<div class="container" id="testimonials">
     <h1 class="slider_title">отзывы</h1>
     <div class="slider">
         <div class="slider_item">
@@ -426,7 +427,7 @@
     </div>
 </div>
 <!--//////////////////////////////////////////////////////////////////////////////////////////FOOTER-->
-<section class="form">
+<section class="form" id="form">
     <div class="form_container">
         <div class="form_items">
             <div class="form_info">
