added meta for google and yandex

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 
     <!-- FAVICONS -->
     <link rel="shortcut icon" href="./img/favicons/logo-electrik2.png" type="image/png">
-    <meta name="description" content="описание сайта для гугла">
-    <meta name="keywords" content="описание сайта для яндекса">
+<!--    //описание для гугла-->
+    <meta name="description" content="электромонтаж любого уровня сложности в городе Сочи, Адлер, Красная поляна, пригороде.">
+<!--    //описание для яндекса-->
+    <meta name="keywords" content="электромонтаж любого уровня сложности в городе Сочи, Адлер, Красная поляна, пригороде.">
     <meta name="google" content="notranslate"/>
     <title>vash-ehlektrik</title>
 
