--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
     <!-- FAVICONS -->
     <link rel="shortcut icon" href="./img/favicons/logo-electrik2.png" type="image/png">
-<!--    //описание для гугла-->
-    <meta name="description" content="электромонтаж любого уровня сложности в городе Сочи, Адлер, Красная поляна, пригороде.">
-<!--    //описание для яндекса-->
-    <meta name="keywords" content="электромонтаж любого уровня сложности в городе Сочи, Адлер, Красная поляна, пригороде.">
+    <!--    //описание для гугла-->
+    <meta name="description"
+          content="электромонтаж любого уровня сложности в городе Сочи, Адлер, Красная поляна, пригороде.">
+    <!--    //описание для яндекса-->
+    <meta name="keywords"
+          content="электромонтаж любого уровня сложности в городе Сочи, Адлер, Красная поляна, пригороде.">
     <meta name="google" content="notranslate"/>
     <title>vash-ehlektrik</title>
 
@@ -37,13 +39,13 @@
                 <img src="img/intro/logo-electrik2.jpg" alt="">
             </div>
             <div class="header_icons">
-                <a href="#"><img class="header_icon" src="./img/social/icons8-vk.svg"
-                                 alt="vk"/></a>
-                <a href="#"><img class="header_icon"
+<!--                <a href="#"><img class="header_icon" src="./img/social/icons8-vk.svg"-->
+<!--                                 alt="vk"/></a>-->
+                <a href="https://t.me/electrician_23" target="_blank"><img class="header_icon"
                                  src="./img/social/icons8-telegram.svg"
                                  alt="telegram"/></a>
-                <a href="#"><img class="header_icon"
-                                 src="./img/social/icons8-instagram.svg" alt="instagram"/></a>
+<!--                <a href="#"><img class="header_icon"-->
+<!--                                 src="./img/social/icons8-instagram.svg" alt="instagram"/></a>-->
             </div>
             <nav class="nav" id="nav">
                 <a href="#" class="nav__link" data-scroll="#about_company">О КОМПАНИИ</a>
@@ -65,10 +67,10 @@
 <section class="intro" id="intro">
     <div class="container">
         <div class="intro__inner">
-            <h1 class="intro__title">ДЕНЬ ИЛИ НОЧЬ В ГОРОДЕ РЕШАТЬ ВАМ</h1>
+            <h1 class="intro__title">ДЕНЬ ИЛИ НОЧЬ В ДОМЕ РЕШАТЬ ВАМ</h1>
             <!--                <h2 class="intro__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna-->
             <!--                  vel scelerisque nisl consectetur et</h2>-->
-            <a class="btn btn--red" href="#">Узнать больше</a>
+            <a class="btn btn--red" href="#" data-scroll="#about_company">Узнать больше</a>
         </div>
     </div>
 </section>             <!-- intro  -->
@@ -311,29 +313,20 @@
     <h1 class="slider_title">Примеры работ</h1>
     <div class="slider">
         <div class="works_item">
-            <img class="works__img" src="img/works/img-1.jpg" alt="">
+            <img class="works__img" src="img/works/1-1.jpg" alt="">
         </div>
         <div class="works_item">
-            <img class="works__img" src="img/works/img-2.jpg" alt="">
+            <img class="works__img" src="img/works/2.jpg" alt="">
         </div>
         <!--    asd-->
         <div class="works_item">
-            <img class="works__img" src="img/works/img-7.jpg" alt="">
+            <img class="works__img" src="img/works/3.jpg" alt="">
         </div>
         <div class="works_item">
-            <img class="works__img" src="img/works/img-4.jpg" alt="">
+            <img class="works__img" src="img/works/4.jpg" alt="">
         </div>
         <div class="works_item">
-            <img class="works__img" src="img/works/img-5.jpg" alt="">
-        </div>
-        <div class="works_item">
-            <img class="works__img" src="img/works/img-6.jpg" alt="">
-        </div>
-        <div class="works_item">
-            <img class="works__img" src="img/works/img-7.jpg" alt="">
-        </div>
-        <div class="works_item">
-            <img class="works__img" src="img/works/img-8.jpg" alt="">
+            <img class="works__img" src="img/works/5.jpg" alt="">
         </div>
     </div>
 </div>      <!-- WORKS  -->
@@ -343,88 +336,107 @@
     <div class="container">
         <h1>наша команда</h1>
         <div class="team__inner">
-            <div class="team__item">
-                <img class="team__img" src="img/team/man-1.jpg" alt="">
-                <h3 class="team__name">Ruth Woods</h3>
-                <h4 class="team__prof">FOUNDER, CEO</h4>
-                <p class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor
-                    mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-                    Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam
-                    quis risus eget urna mollis ornare vel eu leo.</p>
-            </div>
+            <!--            <div class="team__item">-->
+            <!--                <img class="team__img" src="img/team/man-1.jpg" alt="">-->
+            <!--                <h3 class="team__name">Ruth Woods</h3>-->
+            <!--                <h4 class="team__prof">FOUNDER, CEO</h4>-->
+            <!--                <p class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor-->
+            <!--                    mauris condimentum nibh, ut fermentum massa justo sit amet risus.-->
+            <!--                    Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam-->
+            <!--                    quis risus eget urna mollis ornare vel eu leo.</p>-->
+            <!--            </div>-->
 
             <div class="team__item">
-                <img class="team__img" src="img/team/man-2.jpg" alt="">
-                <h3 class="team__name">Timothy Reed</h3>
-                <h4 class="team__prof">CO-FOUNDER, DEVELOPER</h4>
-                <p class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor
-                    mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-                    Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam
-                    quis risus eget urna mollis ornare vel eu leo.</p>
+                <img class="team__img" src="img/team/Boss1.jpg" alt="">
+                <h3 class="team__name">Александр</h3>
+                <h4 class="team__prof">ПРОЕКТИРОВЩИК</h4>
+                <p class="team__text">Сразу после окончания профессионального училища
+                    начал свою трудовую деятельность на севере нашей родины на
+                    промышленных объектах. Изучив характер и специфику электромонтажа в
+                    тяжелых условиях северных широт, начал применять свой опыт в
+                    проектировании электрики частных домов, со временем перебравшись в
+                    Сочи и открыв свою собственную фирму. </p>
             </div>
 
-            <div class="team__item">
-                <img class="team__img" src="img/team/man-3.jpg" alt="">
-                <h3 class="team__name">Victoria Valdez</h3>
-                <h4 class="team__prof">UI DESIGNER</h4>
-                <p class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor
-                    mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-                    Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam
-                    quis risus eget urna mollis ornare vel eu leo.</p>
-            </div>
+            <!--            <div class="team__item">-->
+            <!--                <img class="team__img" src="img/team/man-3.jpg" alt="">-->
+            <!--                <h3 class="team__name">Victoria Valdez</h3>-->
+            <!--                <h4 class="team__prof">UI DESIGNER</h4>-->
+            <!--                <p class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor-->
+            <!--                    mauris condimentum nibh, ut fermentum massa justo sit amet risus.-->
+            <!--                    Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam-->
+            <!--                    quis risus eget urna mollis ornare vel eu leo.</p>-->
+            <!--            </div>-->
 
-            <div class="team__item">
-                <img class="team__img" src="img/team/man-4.jpg" alt="">
-                <h3 class="team__name">Beverly Little</h3>
-                <h4 class="team__prof">DATA SCIENTIST</h4>
-                <p class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor
-                    mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-                    Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam
-                    quis risus eget urna mollis ornare vel eu leo.</p>
-            </div>
+            <!--            <div class="team__item">-->
+            <!--                <img class="team__img" src="img/team/man-4.jpg" alt="">-->
+            <!--                <h3 class="team__name">Beverly Little</h3>-->
+            <!--                <h4 class="team__prof">DATA SCIENTIST</h4>-->
+            <!--                <p class="team__text">Fusce dapibus, tellus ac cursus commodo, tortor-->
+            <!--                    mauris condimentum nibh, ut fermentum massa justo sit amet risus.-->
+            <!--                    Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam-->
+            <!--                    quis risus eget urna mollis ornare vel eu leo.</p>-->
+            <!--            </div>-->
 
         </div>   <!-- team__inner -->
     </div>      <!-- team__container -->
 </div>          <!-- team -->
 
 <!-- /////////////////////////////////////////////////////////////////////TESTIMONIALS  -->
-<div class="container" id="testimonials">
+<div class="testimonials" id="testimonials">
     <h1 class="slider_title">отзывы</h1>
     <div class="slider">
         <div class="slider_item">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
-                doloribus eaque eos modi mollitia natus sint sunt totam? Corporis culpa
-                itaque laborum magni nulla provident temporibus totam unde ut velit.
+            <p>Если нужна будет помощь с электрикой, то обратимся к Александру снова)) Нужно
+                было передвинуть и сделать новые розетки на кухне, а также вывести провода
+                для подсветки и индукционной плиты. Со всеми задачами специалист справился
+                отлично. Приехал, послушал наши пожелания, ознакомился со схемой от
+                дизайнера, где нужно подсказал. Потом сам съездил в магазин и закупился
+                необходимыми материалами, приехал и все быстро и качественно сделал. Мы
+                довольны).
             </p>
-            <h3>Name</h3>
+<!--            <h3>Виктор Боблов</h3>-->
         </div>
         <div class="slider_item">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
-                doloribus eaque eos modi mollitia natus sint sunt totam? Corporis culpa
-                itaque laborum magni nulla provident temporibus totam unde ut velit.
+            <p>По факту нужно было электрифицировать столярную мастерскую, гараж, изменить
+                проводку в баню. Всё сделано на отлично! Если не знаете или нет
+                возможности купить комплектующие самому, всё это можно поручить
+                Александру. Была нестандартная ситуация, когда вырубалось электричество в
+                жилом доме. Но и эту проблему он решил. Смело могу его рекомендовать. Цены
+                более, чем адекватные, обсуждаются. Будут проблемы с электрикой,
+                обязательно к нему обращусь.
             </p>
-            <h3>Name2</h3>
+<!--            <h3>Александр Шишкин</h3>-->
         </div>
         <div class="slider_item">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
-                doloribus eaque eos modi mollitia natus sint sunt totam? Corporis culpa
-                itaque laborum magni nulla provident temporibus totam unde ut velit.
+            <p>Однозначно 5 с Большим плюсом +Было много попыток в поисках специалиста и
+                все хотели как можно больше забрать из моего кармана , с Александром же
+                наоборот , он оценил фронт работы по фото а это не всегда совпадает с
+                реальностью ,плюс мои хотелки по ходу дела , ни слова не сказал Александр ,
+                хотя сделал по моей вине работы в 2 раза больше , делал работу в торговом
+                центре а это ночь … много проверок и стандартов со стороны администрации ,
+                со своей задачей справился на оценку Отлично, Вадим превзошёл мои ожидания
+                ! Профессионал своего дела, ответственный, честный , добрый - а это сейчас
+                важнее всего . Если Александр откликнулся на вашу заявку(просьбу) не
+                задумываясь выбирайте его , потому что считайте с того момента ваш вопрос
+                уже решён , спасибо , удачи !
             </p>
-            <h3>Name3</h3>
+<!--            <h3>Name3</h3>-->
         </div>
         <div class="slider_item">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
-                doloribus eaque eos modi mollitia natus sint sunt totam? Corporis culpa
-                itaque laborum magni nulla provident temporibus totam unde ut velit.
+            <p>Черновая электрика в двух комнатах в панельном доме. Очень понравилось
+                работать с данным специалистом. Мастер обладает отличными знаниями в
+                области электрики и всем необходимым инструментом. В случае необходимости
+                обращусь ещё раз. Рекомендую.
             </p>
-            <h3>Name4</h3>
-        </div>
-        <div class="slider_item">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
-                doloribus eaque eos modi mollitia natus sint sunt totam? Corporis culpa
-                itaque laborum magni nulla provident temporibus totam unde ut velit.
-            </p>
-            <h3>Name5</h3>
+<!--            <h3>Name4</h3>-->
+<!--        </div>-->
+<!--&lt;!&ndash;        <div class="slider_item">&ndash;&gt;-->
+<!--&lt;!&ndash;            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis&ndash;&gt;-->
+<!--&lt;!&ndash;                doloribus eaque eos modi mollitia natus sint sunt totam? Corporis culpa&ndash;&gt;-->
+<!--&lt;!&ndash;                itaque laborum magni nulla provident temporibus totam unde ut velit.&ndash;&gt;-->
+<!--&lt;!&ndash;            </p>&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            <h3>Name5</h3>&ndash;&gt;&ndash;&gt;-->
         </div>
     </div>
 </div>
@@ -433,12 +445,12 @@
     <div class="form_container">
         <div class="form_items">
             <div class="form_info">
-                <h2>адрес</h2>
-                <p class="form_info_p_address">
-                    <span>Бочаров ручей 1</span>
-                    <span>Сочи</span>
-                    <span>Россия</span>
-                </p>
+<!--                <h2>адрес</h2>-->
+<!--                <p class="form_info_p_address">-->
+<!--                    <span>Бочаров ручей 1</span>-->
+<!--                    <span>Сочи</span>-->
+<!--                    <span>Россия</span>-->
+<!--                </p>-->
                 <p>
                             <span>
                                 <img class="phone_svg"
@@ -450,18 +462,18 @@
                             <span class="form_info_email">
                                 <img class="mail_svg"
                                      src="./img/form/mail-svgrepo-com.svg" alt="mail"/>
-                                <a class="form_mail" href="mailto: kznsergeev@mail.ru">kznsergeev@mail.ru</a></span>
+                                <a class="form_mail" href="mailto: silatoka23@mail.ru">silatoka23@mail.ru</a></span>
                 </p>
-                <h2>мы в соц сетях</h2>
+                <h2 class="form_social_header">мы в соц сетях</h2>
                 <div class="header_icons">
-                    <a href="#"><img class="header_icon" src="./img/social/icons8-vk.svg"
-                                     alt="vk"/></a>
-                    <a href="#"><img class="header_icon"
+<!--                    <a href="#"><img class="header_icon" src="./img/social/icons8-vk.svg"-->
+<!--                                     alt="vk"/></a>-->
+                    <a href="https://t.me/electrician_23" target="_blank"><img class="header_icon"
                                      src="./img/social/icons8-telegram.svg"
                                      alt="telegram"/></a>
-                    <a href="#"><img class="header_icon"
-                                     src="./img/social/icons8-instagram.svg"
-                                     alt="instagram"/></a>
+<!--                    <a href="#"><img class="header_icon"-->
+<!--                                     src="./img/social/icons8-instagram.svg"-->
+<!--                                     alt="instagram"/></a>-->
                 </div>
             </div>
             <div class="forms">
