--- a/index.html
+++ b/index.html
@@ -39,19 +39,21 @@
                 <img src="img/intro/logo-electrik2.jpg" alt="">
             </div>
             <div class="header_icons">
-<!--                <a href="#"><img class="header_icon" src="./img/social/icons8-vk.svg"-->
-<!--                                 alt="vk"/></a>-->
-                <a href="https://t.me/electrician_23" target="_blank"><img class="header_icon"
-                                 src="./img/social/icons8-telegram.svg"
-                                 alt="telegram"/></a>
-<!--                <a href="#"><img class="header_icon"-->
-<!--                                 src="./img/social/icons8-instagram.svg" alt="instagram"/></a>-->
+                <!--                <a href="#"><img class="header_icon" src="./img/social/icons8-vk.svg"-->
+                <!--                                 alt="vk"/></a>-->
+                <a href="https://t.me/electrician_23" target="_blank"><img
+                        class="header_icon"
+                        src="./img/social/icons8-telegram.svg"
+                        alt="telegram"/></a>
+                <!--                <a href="#"><img class="header_icon"-->
+                <!--                                 src="./img/social/icons8-instagram.svg" alt="instagram"/></a>-->
             </div>
             <nav class="nav" id="nav">
                 <a href="#" class="nav__link" data-scroll="#about_company">О КОМПАНИИ</a>
                 <a href="#" class="nav__link" data-scroll="#about_services">ПЕРЕЧЕНЬ
                     УСЛУГ</a>
                 <a href="#" class="nav__link" data-scroll="#our-team">НАША КОМАНДА</a>
+                <a href="#" class="nav__link" data-scroll="#stabilizers">СТАБИЛИЗАТОРЫ</a>
                 <a href="#" class="nav__link" data-scroll="#testimonials">ОТЗЫВЫ</a>
                 <a href="#" class="nav__link" data-scroll="#form">КОНТАКТЫ</a>
             </nav>
@@ -70,7 +72,8 @@
             <h1 class="intro__title">ДЕНЬ ИЛИ НОЧЬ В ДОМЕ РЕШАТЬ ВАМ</h1>
             <!--                <h2 class="intro__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna-->
             <!--                  vel scelerisque nisl consectetur et</h2>-->
-            <a class="btn btn--red" href="#" data-scroll="#about_company">Узнать больше</a>
+            <a class="btn btn--red" href="#" data-scroll="#about_company">Узнать
+                больше</a>
         </div>
     </div>
 </section>             <!-- intro  -->
@@ -382,61 +385,107 @@
     </div>      <!-- team__container -->
 </div>          <!-- team -->
 
+<!-- /////////////////////////////////////////////////////////////////////STABILIZERS  -->
+<div class="stabilizers" id="stabilizers">
+    <div class="container">
+        <h1 class="stabilizers_title">Стабилизаторы напряжения</h1>
+        <p class="stabilizers_text">На просторах нашей родины существует множество
+            населенных пунктов с изношенной
+            или
+            перегруженной электросетевой инфраструктурой, что является причиной поломки
+            или нестабильной работы электроприборов, установленных в доме. Город Сочи, к
+            сожалению, здесь не исключение. Тут нас и спасают стабилизаторы напряжения. О
+            принципах действия этих приборов, способе установки и правильном выборе вы
+            можете почитать по ссылке:
+            <a href="https://ibp-ural.ru/montazh-stabilizatoro-v-chastnom-dome">стабилизаторы
+                напряжения</a></p>
+        <p class="stabilizers_text">В процессе своей работы столкнулся с проблемой
+            нехватки качественных и надежных
+            стабилизаторов. После тщательного отбора было выбрано несколько
+            вариантов. Их мы и монтируем при заказе клиентам. <span
+                    class="stabilizers_text_sale">Так же они имеюся в у нас в продаже.</span>
+        </p>
+        <p class="stabilizers_text"> По всем вопросам покупки и установки стабилизатора вы
+            так же можете проконсультироваться по телефону <a class="tel"
+                                                              href="tel:+79534031896">8
+                (953) 403-18-96</a>.
+        </p>
+    </div>
+</div>
+
 <!-- /////////////////////////////////////////////////////////////////////TESTIMONIALS  -->
 <div class="testimonials" id="testimonials">
     <h1 class="slider_title">отзывы</h1>
     <div class="slider">
         <div class="slider_item">
-            <p>Если нужна будет помощь с электрикой, то обратимся к Александру снова)) Нужно
-                было передвинуть и сделать новые розетки на кухне, а также вывести провода
-                для подсветки и индукционной плиты. Со всеми задачами специалист справился
+            <p>Если нужна будет помощь с электрикой, то обратимся к Александру снова))
+                Нужно
+                было передвинуть и сделать новые розетки на кухне, а также вывести
+                провода
+                для подсветки и индукционной плиты. Со всеми задачами специалист
+                справился
                 отлично. Приехал, послушал наши пожелания, ознакомился со схемой от
-                дизайнера, где нужно подсказал. Потом сам съездил в магазин и закупился
-                необходимыми материалами, приехал и все быстро и качественно сделал. Мы
+                дизайнера, где нужно подсказал. Потом сам съездил в магазин и
+                закупился
+                необходимыми материалами, приехал и все быстро и качественно сделал.
+                Мы
                 довольны).
             </p>
-<!--            <h3>Виктор Боблов</h3>-->
+            <!--            <h3>Виктор Боблов</h3>-->
         </div>
         <div class="slider_item">
-            <p>По факту нужно было электрифицировать столярную мастерскую, гараж, изменить
+            <p>По факту нужно было электрифицировать столярную мастерскую, гараж,
+                изменить
                 проводку в баню. Всё сделано на отлично! Если не знаете или нет
                 возможности купить комплектующие самому, всё это можно поручить
-                Александру. Была нестандартная ситуация, когда вырубалось электричество в
-                жилом доме. Но и эту проблему он решил. Смело могу его рекомендовать. Цены
+                Александру. Была нестандартная ситуация, когда вырубалось
+                электричество в
+                жилом доме. Но и эту проблему он решил. Смело могу его рекомендовать.
+                Цены
                 более, чем адекватные, обсуждаются. Будут проблемы с электрикой,
                 обязательно к нему обращусь.
             </p>
-<!--            <h3>Александр Шишкин</h3>-->
+            <!--            <h3>Александр Шишкин</h3>-->
         </div>
         <div class="slider_item">
-            <p>Однозначно 5 с Большим плюсом +Было много попыток в поисках специалиста и
-                все хотели как можно больше забрать из моего кармана , с Александром же
+            <p>Однозначно 5 с Большим плюсом +Было много попыток в поисках специалиста
+                и
+                все хотели как можно больше забрать из моего кармана , с Александром
+                же
                 наоборот , он оценил фронт работы по фото а это не всегда совпадает с
-                реальностью ,плюс мои хотелки по ходу дела , ни слова не сказал Александр ,
-                хотя сделал по моей вине работы в 2 раза больше , делал работу в торговом
-                центре а это ночь … много проверок и стандартов со стороны администрации ,
-                со своей задачей справился на оценку Отлично, Вадим превзошёл мои ожидания
-                ! Профессионал своего дела, ответственный, честный , добрый - а это сейчас
+                реальностью ,плюс мои хотелки по ходу дела , ни слова не сказал
+                Александр
+                ,
+                хотя сделал по моей вине работы в 2 раза больше , делал работу в
+                торговом
+                центре а это ночь … много проверок и стандартов со стороны
+                администрации ,
+                со своей задачей справился на оценку Отлично, Вадим превзошёл мои
+                ожидания
+                ! Профессионал своего дела, ответственный, честный , добрый - а это
+                сейчас
                 важнее всего . Если Александр откликнулся на вашу заявку(просьбу) не
-                задумываясь выбирайте его , потому что считайте с того момента ваш вопрос
+                задумываясь выбирайте его , потому что считайте с того момента ваш
+                вопрос
                 уже решён , спасибо , удачи !
             </p>
-<!--            <h3>Name3</h3>-->
+            <!--            <h3>Name3</h3>-->
         </div>
         <div class="slider_item">
             <p>Черновая электрика в двух комнатах в панельном доме. Очень понравилось
                 работать с данным специалистом. Мастер обладает отличными знаниями в
-                области электрики и всем необходимым инструментом. В случае необходимости
+                области электрики и всем необходимым инструментом. В случае
+                необходимости
                 обращусь ещё раз. Рекомендую.
             </p>
-<!--            <h3>Name4</h3>-->
-<!--        </div>-->
-<!--&lt;!&ndash;        <div class="slider_item">&ndash;&gt;-->
-<!--&lt;!&ndash;            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis&ndash;&gt;-->
-<!--&lt;!&ndash;                doloribus eaque eos modi mollitia natus sint sunt totam? Corporis culpa&ndash;&gt;-->
-<!--&lt;!&ndash;                itaque laborum magni nulla provident temporibus totam unde ut velit.&ndash;&gt;-->
-<!--&lt;!&ndash;            </p>&ndash;&gt;-->
-<!--&lt;!&ndash;&lt;!&ndash;            <h3>Name5</h3>&ndash;&gt;&ndash;&gt;-->
+            <!--            <h3>Name4</h3>-->
+            <!--        </div>-->
+            <!--&lt;!&ndash;        <div class="slider_item">&ndash;&gt;-->
+            <!--&lt;!&ndash;            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis&ndash;&gt;-->
+            <!--&lt;!&ndash;                doloribus eaque eos modi mollitia natus sint sunt totam? Corporis culpa&ndash;&gt;-->
+            <!--&lt;!&ndash;                itaque laborum magni nulla provident temporibus totam unde ut velit.&ndash;&gt;-->
+            <!--&lt;!&ndash;            </p>&ndash;&gt;-->
+            <!--&lt;!&ndash;&lt;!&ndash;            <h3>Name5</h3>&ndash;&gt;&ndash;&gt;-->
         </div>
     </div>
 </div>
@@ -445,12 +494,12 @@
     <div class="form_container">
         <div class="form_items">
             <div class="form_info">
-<!--                <h2>адрес</h2>-->
-<!--                <p class="form_info_p_address">-->
-<!--                    <span>Бочаров ручей 1</span>-->
-<!--                    <span>Сочи</span>-->
-<!--                    <span>Россия</span>-->
-<!--                </p>-->
+                <!--                <h2>адрес</h2>-->
+                <!--                <p class="form_info_p_address">-->
+                <!--                    <span>Бочаров ручей 1</span>-->
+                <!--                    <span>Сочи</span>-->
+                <!--                    <span>Россия</span>-->
+                <!--                </p>-->
                 <p>
                             <span>
                                 <img class="phone_svg"
@@ -466,14 +515,15 @@
                 </p>
                 <h2 class="form_social_header">мы в соц сетях</h2>
                 <div class="header_icons">
-<!--                    <a href="#"><img class="header_icon" src="./img/social/icons8-vk.svg"-->
-<!--                                     alt="vk"/></a>-->
-                    <a href="https://t.me/electrician_23" target="_blank"><img class="header_icon"
-                                     src="./img/social/icons8-telegram.svg"
-                                     alt="telegram"/></a>
-<!--                    <a href="#"><img class="header_icon"-->
-<!--                                     src="./img/social/icons8-instagram.svg"-->
-<!--                                     alt="instagram"/></a>-->
+                    <!--                    <a href="#"><img class="header_icon" src="./img/social/icons8-vk.svg"-->
+                    <!--                                     alt="vk"/></a>-->
+                    <a href="https://t.me/electrician_23" target="_blank"><img
+                            class="header_icon"
+                            src="./img/social/icons8-telegram.svg"
+                            alt="telegram"/></a>
+                    <!--                    <a href="#"><img class="header_icon"-->
+                    <!--                                     src="./img/social/icons8-instagram.svg"-->
+                    <!--                                     alt="instagram"/></a>-->
                 </div>
             </div>
             <div class="forms">
@@ -482,7 +532,8 @@
                     <div class="forms_flex">
                         <div class="form_name_input"><input class="form_control"
                                                             name="Name" type="text"
-                                                            placeholder="Ваше имя"/></div>
+                                                            placeholder="Ваше имя"/>
+                        </div>
                         <div class="form_email_input"><input class="form_control"
                                                              name="Email" type="email"
                                                              placeholder="Ваш email"/>
