--- a/index.html
+++ b/index.html
@@ -399,27 +399,29 @@
 <!-- /////////////////////////////////////////////////////////////////////TESTIMONIALS  -->
 <div class="testimonials" id="testimonials">
     <h1 class="slider_title">отзывы</h1>
-    <div class="slider">
-        <div class="slider_item">
-            <img src="img/testimonials/Screenshot_1.png" alt="отзыв_1">
-        </div>
-        <div class="slider_item">
-            <img src="img/testimonials/Screenshot_2.png" alt="отзыв_2">
-        </div>
-        <div class="slider_item">
-            <img src="img/testimonials/Screenshot_3.png" alt="отзыв_3">
-        </div>
-        <div class="slider_item">
-            <img src="img/testimonials/Screenshot_4.png" alt="отзыв_4">
-        </div>
-        <div class="slider_item">
-            <img src="img/testimonials/Screenshot_5.png" alt="отзыв_5">
-        </div>
-        <div class="slider_item">
-            <img src="img/testimonials/Screenshot_6.png" alt="отзыв_6">
-        </div>
-        <div class="slider_item">
-            <img src="img/testimonials/Screenshot_7.png" alt="отзыв_7">
+    <div class="slider_testimonials">
+        <div class="slider">
+            <div class="slider_item">
+                <img src="img/testimonials/Screenshot_1.png" alt="отзыв_1">
+            </div>
+            <div class="slider_item">
+                <img src="img/testimonials/Screenshot_2.png" alt="отзыв_2">
+            </div>
+            <div class="slider_item">
+                <img src="img/testimonials/Screenshot_3.png" alt="отзыв_3">
+            </div>
+            <div class="slider_item">
+                <img src="img/testimonials/Screenshot_4.png" alt="отзыв_4">
+            </div>
+            <div class="slider_item">
+                <img src="img/testimonials/Screenshot_5.png" alt="отзыв_5">
+            </div>
+            <div class="slider_item">
+                <img src="img/testimonials/Screenshot_6.png" alt="отзыв_6">
+            </div>
+            <div class="slider_item">
+                <img src="img/testimonials/Screenshot_7.png" alt="отзыв_7">
+            </div>
         </div>
     </div>
     <div class="testimonials_avito">
