--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <link
             href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:wght@700&family=Raleway:wght@300;400;600;700&display=swap"
             rel="stylesheet">
-    <link rel="stylesheet" type="text/css"
-          href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" href="css/style.css">
+    <!--    Слайдер-->
 
     <!-- FAVICONS -->
     <link rel="shortcut icon" href="./img/favicons/logo-electrik2.png" type="image/png">
@@ -23,11 +21,8 @@
     <meta name="keywords"
           content="электромонтаж любого уровня сложности в городе Сочи, Адлер, Красная поляна, пригороде.">
     <meta name="google" content="notranslate"/>
+    <link rel="stylesheet" href="css/style.css">
     <title>vash-ehlektrik</title>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"
-            integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
@@ -314,35 +309,37 @@
 
 <!-- /////////////////////////////////////////////////////////////////////WORKS  -->
 <div class="works" id="works">
-    <h1 class="slider_title">Примеры работ</h1>
-    <div class="slider">
-        <div class="works_item">
-            <img class="works__img" src="img/works/1.jpg" alt="">
-        </div>
-        <div class="works_item">
-            <img class="works__img" src="img/works/2.jpg" alt="">
-        </div>
-        <!--    asd-->
-        <div class="works_item">
-            <img class="works__img" src="img/works/3.jpg" alt="">
-        </div>
-        <div class="works_item">
-            <img class="works__img" src="img/works/4.jpg" alt="">
-        </div>
-        <div class="works_item">
-            <img class="works__img" src="img/works/5.jpg" alt="">
-        </div>
-        <div class="works_item">
-            <img class="works__img" src="img/works/6.jpg" alt="">
-        </div>
-        <div class="works_item">
-            <img class="works__img" src="img/works/7.jpg" alt="">
-        </div>
-        <div class="works_item">
-            <img class="works__img" src="img/works/8.jpg" alt="">
-        </div>
-        <div class="works_item">
-            <img class="works__img" src="img/works/9.jpg" alt="">
+    <h1 class="works_title">Примеры работ</h1>
+    <div class="slider_works">
+        <div class="slider">
+            <div class="works_item">
+                <img class="works__img" src="img/works/1.jpg" alt="">
+            </div>
+            <div class="works_item">
+                <img class="works__img" src="img/works/2.jpg" alt="">
+            </div>
+            <!--    asd-->
+            <div class="works_item">
+                <img class="works__img" src="img/works/3.jpg" alt="">
+            </div>
+            <div class="works_item">
+                <img class="works__img" src="img/works/4.jpg" alt="">
+            </div>
+            <div class="works_item">
+                <img class="works__img" src="img/works/5.jpg" alt="">
+            </div>
+            <div class="works_item">
+                <img class="works__img" src="img/works/6.jpg" alt="">
+            </div>
+            <div class="works_item">
+                <img class="works__img" src="img/works/7.jpg" alt="">
+            </div>
+            <div class="works_item">
+                <img class="works__img" src="img/works/8.jpg" alt="">
+            </div>
+            <div class="works_item">
+                <img class="works__img" src="img/works/9.jpg" alt="">
+            </div>
         </div>
     </div>
 </div>      <!-- WORKS  -->
@@ -425,7 +422,8 @@
         </div>
     </div>
     <div class="testimonials_avito">
-        <p class="testimonials_avito_title">Все актуальные отзывы можно посмотреть у нас на
+        <p class="testimonials_avito_title">Все актуальные отзывы можно посмотреть у нас
+            на
             странице в <a
                     href="https://www.avito.ru/sochi/predlozheniya_uslug/elektrik_uslugi_elektrika_elektromontazh_nalbeznal_1092946497"
                     target="_blank"><span>Авито</span></a></p>
@@ -467,11 +465,13 @@
                 <h2 class="forms_title">напишите нам</h2>
                 <form action="#" id="form" class="forms_main">
                     <div class="forms_flex">
-                        <div class="form_name_input"><input id="formName" class="form_control _req"
+                        <div class="form_name_input"><input id="formName"
+                                                            class="form_control _req"
                                                             name="name" type="text"
                                                             placeholder="Ваше имя*"/>
                         </div>
-                        <div class="form_email_input"><input id="formEmail" class="form_control _req _email"
+                        <div class="form_email_input"><input id="formEmail"
+                                                             class="form_control _req _email"
                                                              name="email" type="email"
                                                              placeholder="Ваш email*"/>
                         </div>
@@ -493,8 +493,17 @@
     </div>
 </section>   <!--///////////////////////FORM-->
 
-<script src="./js/slick.min.js"></script>
+<!--Скролинг по дата атрибутам-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"
+        integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+
+</script>
 <script src="./js/app.js"></script>
+<!--Слайдер-->
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+<script src="./js/slick.min.js"></script>
+<!--Для формы обратной связи-->
 <script src="./js/form.js"></script>
 </body>
 
