--- a/index.html
+++ b/index.html
@@ -402,25 +402,32 @@
     <div class="slider_testimonials">
         <div class="slider2">
             <div class="testimonials_item">
-                <img class="testimonials__img" src="img/testimonials/Screenshot_1.png" alt="отзыв_1">
+                <img class="testimonials__img" src="img/testimonials/Screenshot_1.png"
+                     alt="отзыв_1">
             </div>
             <div class="testimonials_item">
-                <img class="testimonials__img" src="img/testimonials/Screenshot_2.png" alt="отзыв_2">
+                <img class="testimonials__img" src="img/testimonials/Screenshot_2.png"
+                     alt="отзыв_2">
             </div>
             <div class="testimonials_item">
-                <img class="testimonials__img" src="img/testimonials/Screenshot_3.png" alt="отзыв_3">
+                <img class="testimonials__img" src="img/testimonials/Screenshot_3.png"
+                     alt="отзыв_3">
             </div>
             <div class="testimonials_item">
-                <img class="testimonials__img" src="img/testimonials/Screenshot_4.png" alt="отзыв_4">
+                <img class="testimonials__img" src="img/testimonials/Screenshot_4.png"
+                     alt="отзыв_4">
             </div>
             <div class="testimonials_item">
-                <img class="testimonials__img" src="img/testimonials/Screenshot_5.png" alt="отзыв_5">
+                <img class="testimonials__img" src="img/testimonials/Screenshot_5.png"
+                     alt="отзыв_5">
             </div>
             <div class="testimonials_item">
-                <img class="testimonials__img" src="img/testimonials/Screenshot_6.png" alt="отзыв_6">
+                <img class="testimonials__img" src="img/testimonials/Screenshot_6.png"
+                     alt="отзыв_6">
             </div>
             <div class="testimonials_item">
-                <img class="testimonials__img" src="img/testimonials/Screenshot_7.png" alt="отзыв_7">
+                <img class="testimonials__img" src="img/testimonials/Screenshot_7.png"
+                     alt="отзыв_7">
             </div>
         </div>
     </div>
@@ -496,19 +503,18 @@
     </div>
 </section>   <!--///////////////////////FORM-->
 
-<!--Скролинг по дата атрибутам-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"
         integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-
 </script>
-<script src="c"></script>
 <!--Слайдер-->
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 <script src="./js/slick.min.js"></script>
 <script src="./js/slider.js"></script>
 <!--Для формы обратной связи-->
 <script src="./js/form.js"></script>
+<!--Скролинг по дата атрибутам-->
+<script src="./js/app.js"></script>
 </body>
 
 </html>
