prepared for check on valid

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -20,9 +20,9 @@
     <!--    //описание для яндекса-->
     <meta name="keywords"
           content="электромонтаж любого уровня сложности в городе Сочи, Адлер, Красная поляна, пригороде.">
-    <meta name="google" content="notranslate"/>
+    <meta name="google" content="notranslate">
     <link rel="stylesheet" href="css/style.css">
-    <title>vash-ehlektrik</title>
+    <title>Ваш электрик</title>
 </head>
 
 <body>
@@ -37,12 +37,12 @@
                 <a href="https://t.me/electrician_23" target="_blank"><img
                         class="header_icon1"
                         src="./img/social/icons8-telegram.svg"
-                        alt="telegram"/></a>
+                        alt="telegram"></a>
                 <a href="https://www.avito.ru/sochi/predlozheniya_uslug/elektrik_uslugi_elektrika_elektromontazh_nalbeznal_1092946497"
                    target="_blank"><img
                         class="header_icon2"
                         src="./img/social/Avito-logo.svg"
-                        alt="telegram"/></a>
+                        alt="avito"></a>
             </div>
             <nav class="nav" id="nav">
                 <a href="#" class="nav__link" data-scroll="#about_company">О КОМПАНИИ</a>
@@ -65,9 +65,7 @@
 <section class="intro" id="intro">
     <div class="container">
         <div class="intro__inner">
-            <h1 class="intro__title">ДЕНЬ ИЛИ НОЧЬ В ДОМЕ РЕШАТЬ ВАМ</h1>
-            <!--                <h2 class="intro__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna-->
-            <!--                  vel scelerisque nisl consectetur et</h2>-->
+            <h2 class="intro__title">ДЕНЬ ИЛИ НОЧЬ В ДОМЕ РЕШАТЬ ВАМ</h2>
             <a class="btn btn--red" href="#" data-scroll="#about_company">Узнать
                 больше</a>
         </div>
@@ -313,35 +311,35 @@
     <div class="slider_works">
         <div class="slider">
             <div class="works_item">
-                <img class="works__img" src="img/works/1.jpg" alt="">
+                <img class="works__img" src="img/works/1.jpg" alt="photo1">
             </div>
             <div class="works_item">
-                <img class="works__img" src="img/works/2.jpg" alt="">
+                <img class="works__img" src="img/works/2.jpg" alt="photo2">
             </div>
             <!--    asd-->
             <div class="works_item">
-                <img class="works__img" src="img/works/3.jpg" alt="">
+                <img class="works__img" src="img/works/3.jpg" alt="photo3">
             </div>
             <div class="works_item">
-                <img class="works__img" src="img/works/4.jpg" alt="">
+                <img class="works__img" src="img/works/4.jpg" alt="photo4">
             </div>
             <div class="works_item">
-                <img class="works__img" src="img/works/5.jpg" alt="">
+                <img class="works__img" src="img/works/5.jpg" alt="photo5">
             </div>
             <div class="works_item">
-                <img class="works__img" src="img/works/6.jpg" alt="">
+                <img class="works__img" src="img/works/6.jpg" alt="photo6">
             </div>
             <div class="works_item">
-                <img class="works__img" src="img/works/7.jpg" alt="">
+                <img class="works__img" src="img/works/7.jpg" alt="photo7">
             </div>
             <div class="works_item">
-                <img class="works__img" src="img/works/8.jpg" alt="">
+                <img class="works__img" src="img/works/8.jpg" alt="photo8">
             </div>
             <div class="works_item">
-                <img class="works__img" src="img/works/9.jpg" alt="">
+                <img class="works__img" src="img/works/9.jpg" alt="photo9">
             </div>
             <div class="works_item">
-                <img class="works__img" src="img/works/10.jpg" alt="">
+                <img class="works__img" src="img/works/10.jpg" alt="photo10">
             </div>
         </div>
     </div>
@@ -447,15 +445,15 @@
                 <p>
                             <span>
                                 <img class="phone_svg"
-                                     src="./img/form/phone-svgrepo-com.svg" alt="tel"/>
+                                     src="./img/form/phone-svgrepo-com.svg" alt="tel">
                                 <a class="form_phone"
                                    href="tel:+79534031896">8 (953) 403-18-96</a></span>
                 </p>
                 <p>
                             <span class="form_info_email">
                                 <img class="mail_svg"
-                                     src="./img/form/mail-svgrepo-com.svg" alt="mail"/>
-                                <a class="form_mail" href="mailto: silatoka23@mail.ru"
+                                     src="./img/form/mail-svgrepo-com.svg" alt="mail">
+                                <a class="form_mail" href="mailto:silatoka23@mail.ru"
                                    target="_blank">silatoka23@mail.ru</a></span>
                 </p>
                 <h2 class="form_social_header">мы в соц сетях</h2>
@@ -463,34 +461,38 @@
                     <a href="https://t.me/electrician_23" target="_blank"><img
                             class="form_social_icon1"
                             src="./img/social/icons8-telegram.svg"
-                            alt="telegram"/></a>
+                            alt="telegram"></a>
                     <a href="https://www.avito.ru/sochi/predlozheniya_uslug/elektrik_uslugi_elektrika_elektromontazh_nalbeznal_1092946497"
                        target="_blank"><img
                             class="form_social_icon2"
                             src="./img/social/Avito-logo.svg"
-                            alt="telegram"/></a>
+                            alt="avito"></a>
                 </div>
             </div>
             <div class="forms">
                 <h2 class="forms_title">напишите нам</h2>
                 <form action="#" id="form" class="forms_main">
                     <div class="forms_flex">
-                        <div class="form_name_input"><input id="formName"
-                                                            class="form_control _req"
-                                                            name="name" type="text"
-                                                            placeholder="Ваше имя*"/>
+                        <div class="form_name_input"><label
+                                for="formName"></label><input id="formName"
+                                                              class="form_control _req"
+                                                              name="name" type="text"
+                                                              placeholder="Ваше имя*">
                         </div>
-                        <div class="form_email_input"><input id="formEmail"
-                                                             class="form_control _req _email"
-                                                             name="email" type="email"
-                                                             placeholder="Ваш email*"/>
+                        <div class="form_email_input"><label
+                                for="formEmail"></label><input id="formEmail"
+                                                               class="form_control _req _email"
+                                                               name="email" type="email"
+                                                               placeholder="Ваш email*">
                         </div>
                         <div class="form_textarea_input">
-                                    <textarea
-                                            class="form_control"
-                                            name="form-message"
-                                            placeholder="Расскакжите что вас интересует">
-                                    </textarea>
+                            <label>
+<textarea
+        class="form_control"
+        name="form-message"
+        placeholder="Расскакжите что вас интересует">
+</textarea>
+                            </label>
 
                         </div>
                     </div>
